sumo/tests/duarouter/trips/errors/vehicle_false_departspeed/errors.duarouter
Error: Invalid departSpeed definition for vehicle '';
 must be one of ("random", "max", or a float>=0)
Quitting (on error).
